consistent naming, re #6885

--- a/public/assets/stylesheets/mixins/colors.less
+++ b/public/assets/stylesheets/mixins/colors.less
@@ -22,7 +22,7 @@
                           (hsvsaturation(@base-color) - 41.8%),
                           (hsvvalue(@base-color) + 23.9)); // #899ab9;
 
-@public_course_bgcolor: @red;
+@public-course-bgcolor: @red;
 
 @table-header-color: @dark-gray-color-15;
 @table-footer-color: @dark-gray-color-15;
