refactor assigning of teachers and groups when editing a course date, re #6851

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -23,6 +23,7 @@
 @import "less/content_box.less";
 @import "less/badges.less";
 @import "less/actionmenu.less";
+@import "less/studip-selection.less";
 
 @import "less/ajax.less";
 @import "less/autocomplete.less";
