a little more space between the list items looks way better, re #6851

--- a/public/assets/stylesheets/less/studip-selection.less
+++ b/public/assets/stylesheets/less/studip-selection.less
@@ -24,6 +24,7 @@
         color: @base-color;
         cursor: pointer;
         margin: 1px 0;
+        padding-right: 0.5em;
     }
 
     li.empty-placeholder {
