--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -31,6 +31,10 @@ section.contentbox {
             padding: 2px;
             display: flex;
             align-items: center;
+            
+            > *:not(:first-child) {
+                padding-left: 0.25em;
+            }
         }
     }
     footer:empty {
