use clickable icon color, re #6851

--- a/public/assets/stylesheets/less/studip-selection.less
+++ b/public/assets/stylesheets/less/studip-selection.less
@@ -68,13 +68,13 @@
     .studip-selection-selected li:hover {
         .studip-selection-image,
         .studip-selection-label::before {
-            .background-icon('remove-circle-full', 'status-red');
+            .background-icon('remove-circle-full', 'clickable');
         }
     }
     .studip-selection-selectable li:hover {
         .studip-selection-image,
         .studip-selection-label::before {
-            .background-icon('add-circle-full', 'status-green');
+            .background-icon('add-circle-full', 'clickable');
         }
     }
 
