--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -239,6 +239,18 @@ form.default {
             display: inline-block;;
         }
     }
+
+    label.packed {
+        .flex();
+
+        > * {
+            .flex-item(1, 1, 100%);
+        }
+        button {
+            .flex-item(1, 0, auto);
+            margin: 0;
+        }
+    }
 }
 
 .studip-checkbox {
