--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -4,7 +4,7 @@ form.default {
     @max-width-l: 100%;
 
     input[type=date], input[type=email], input[type=number],
-    input[type=password], input[type=text], input[type=time], input[type=url],
+    input[type=password], input[type=text], input[type=time], input[type=url], input[type=tel],
     textarea, select {
         .box-sizing(border-box);
 
@@ -32,7 +32,7 @@ form.default {
         }
     }
 
-    input[type=date], input[type=number], input[type=time] {
+    input[type=date], input[type=number], input[type=time], input[type=tel]  {
         max-width: @max-width-s;
     }
 
@@ -47,7 +47,7 @@ form.default {
         text-indent: 0.25ex;
 
         input[type=date], input[type=email], input[type=number],
-        input[type=password], input[type=text], input[type=time], input[type=url],
+        input[type=password], input[type=text], input[type=time], input[type=tel], input[type=url],
         textarea, select {
             display: block;
             margin-top: 1ex;
@@ -181,7 +181,7 @@ form.default {
 
         &, label:not(.undecorated) {
             input[type=date], input[type=email], input[type=number],
-            input[type=password], input[type=text], input[type=time], input[type=url],
+            input[type=password], input[type=text], input[type=time], input[type=tel], input[type=url],
             textarea, select {
                 display: inline-block;
                 margin-top: 0;
