--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -202,7 +202,7 @@ label[for="responsive-toggle"] {
         }
 
         > ul > li {
-            flex: 1 auto;
+            flex: 1 0 auto;
 
             &:first-child {
                 flex: 1 1 100%;
