--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -55,6 +55,7 @@
 @import "less/opengraph.less";
 @import "less/statusgroups.less";
 @import "less/start.less";
+@import "less/profile.less";
 
 @import "less/mobile.less";
 @import "less/pagination.less";
