--- a/public/assets/stylesheets/less/start.less
+++ b/public/assets/stylesheets/less/start.less
@@ -47,6 +47,13 @@
             display: none;
         }
     }
+
+    > div > article.studip {
+        border: none;
+        > header {
+            display: none;
+        }
+    }
 }
 
 .studip-widget:hover {
