--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -24,6 +24,8 @@
 @import "less/badges.less";
 @import "less/actionmenu.less";
 @import "less/studip-selection.less";
+@import "less/article.less";
+@import "less/comments.less";
 
 @import "less/ajax.less";
 @import "less/autocomplete.less";
