--- a/public/assets/stylesheets/less/questionnaire.less
+++ b/public/assets/stylesheets/less/questionnaire.less
@@ -83,6 +83,10 @@
     .ct-series-e .ct-area, .ct-series-e .ct-slice-pie {
         fill: @orange;
     }
+
+    table tbody tr:last-child td {
+        border-bottom: 0;
+    }
 }
 
 
