--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -422,6 +422,9 @@ table.default {
                 background: #ffffff url("@{image-path}/anfasser_24.png") center no-repeat;
                 cursor: move;
             }
+            &.dragover > td {
+                background-color: @yellow-20;
+            }
         }
         > tr:last-child > td {
             border-bottom: 1px solid @brand-color-darker;
