--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -759,6 +759,9 @@ table.default > tbody > tr > td.dragHandle {
   background: #ffffff url("../images/anfasser_24.png") center no-repeat;
   cursor: move;
 }
+table.default > tbody > tr.dragover > td {
+  background-color: #f7a866;
+}
 table.default > tbody > tr:last-child > td {
   border-bottom: 1px solid #1f4171;
 }
