--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -45,6 +45,7 @@
 @import "less/cronjobs.less";
 @import "less/documents.less";
 @import "less/dates.less";
+@import "less/files.less";
 @import "less/evaluation.less";
 @import "less/index.less";
 @import "less/news.less";
