--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -9,3 +9,22 @@
     background-repeat: no-repeat;
     border: @base-color solid 1px;
 }
+.source_selector {
+    display: none;
+}
+.file_select_possibilities {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    > * {
+        margin: 10px;
+        border: thin solid @content-color-20;
+        padding: 5px;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
