--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -426,9 +426,9 @@ table.default {
                 background-color: @yellow-20;
             }
         }
-        > tr:last-child > td {
+    }
+    > tbody > tr:last-child > td {
             border-bottom: 1px solid @brand-color-darker;
-        }
     }
     // Hover effect
     &:not(.nohover) > tbody:not(.nohover) > tr:not(.nohover):hover > td:not(.nohover) {
