--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -762,7 +762,7 @@ table.default > tbody > tr > td.dragHandle {
 table.default > tbody > tr.dragover > td {
   background-color: #fce2cc;
 }
-table.default > tbody > tr:last-child > td {
+table.default > tbody:last-of-type > tr:last-child > td {
   border-bottom: 1px solid #1f4171;
 }
 table.default:not(.nohover) > tbody:not(.nohover) > tr:not(.nohover):hover > td:not(.nohover) {
