--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -14,6 +14,7 @@
 }
 .file_select_possibilities {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: stretch;
     > * {
@@ -21,7 +22,11 @@
         border: thin solid @content-color-20;
         padding: 5px;
         width: 100px;
+        min-width: 100px;
+        max-width: 100px;
         height: 100px;
+        min-height: 100px;
+        max-height: 100px;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
