--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -31,5 +31,6 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+        text-align: center;
     }
 }
