MOADB: make upload available for all pages

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     border: @base-color solid 1px;
 }
-.source_selector {
+.files_source_selector {
     display: none;
 }
 .file_select_possibilities {
