--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5732,7 +5732,7 @@ table.dates .draggable-topic-handle {
   background-repeat: no-repeat;
   border: #28497c solid 1px;
 }
-.source_selector {
+.files_source_selector {
   display: none;
 }
 .file_select_possibilities {
