add tablesorter filter for flat view

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -232,6 +232,15 @@ tr.sortable {
     }
 }
 
+.tablesorter .filtered {
+    display: none;
+}
+
+.tablesorter .tablesorter-errorRow td {
+    text-align: center;
+    cursor: pointer;
+}
+
 /* styles for settings tables */
 .settings {
     border-collapse: collapse;
