--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -15,6 +15,7 @@
     justify-content: center;
     align-items: stretch;
     > * {
+        background-color: transparent;
         margin: 10px;
         border: thin solid @content-color-20;
         padding: 5px;
@@ -24,10 +25,25 @@
         height: 100px;
         min-height: 100px;
         max-height: 100px;
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         text-align: center;
+        > img {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    > button {
+        cursor: pointer;
+        width: 140px;
+        min-width: 140px;
+        max-width: 140px;
+        height: 140px;
+        min-height: 140px;
+        max-height: 140px;
+        color: @base-color;
     }
 }
