--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5746,6 +5746,7 @@ table.dates .draggable-topic-handle {
   align-items: stretch;
 }
 .file_select_possibilities > * {
+  background-color: transparent;
   margin: 10px;
   border: thin solid #e7ebf1;
   padding: 5px;
@@ -5755,11 +5756,26 @@ table.dates .draggable-topic-handle {
   height: 100px;
   min-height: 100px;
   max-height: 100px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
+}
+.file_select_possibilities > * > img {
+  margin-left: auto;
+  margin-right: auto;
+}
+.file_select_possibilities > button {
+  cursor: pointer;
+  width: 140px;
+  min-width: 140px;
+  max-width: 140px;
+  height: 140px;
+  min-height: 140px;
+  max-height: 140px;
+  color: #28497c;
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
 .eval_title {
