remove deprecated icons, refs #6990

--- a/public/assets/stylesheets/less/admin.less
+++ b/public/assets/stylesheets/less/admin.less
@@ -138,11 +138,11 @@ table.attribute_table {
     }
 
     th .course-completion {
-        .retina-background-icon('blue/radiobutton-checked.svg');
+        .background-icon('radiobutton-checked', 'clickable');
     }
 
     td .course-completion {
-        .retina-background-icon('red/radiobutton-checked.svg');
+        .background-icon('radiobutton-checked', 'status-red');
 
         &.course-complete {
             .background-icon('radiobutton-checked', 'status-green');
