--- a/public/assets/stylesheets/less/links.less
+++ b/public/assets/stylesheets/less/links.less
@@ -38,10 +38,10 @@ a.link-extern {
     .icon('before', 'link-extern', 'clickable', 16, 2px);
 }
 a.link-add {
-    .icon-before('blue/add.png', 16, 2px);
+    .icon('before', 'add', 'clickable', 16, 2px);
 }
 a.link-edit {
-    .icon-before('blue/edit.png', 16, 2px);
+    .icon('before', 'edit', 'clickable', 16, 2px);
 }
 
 a img {
