fix less, refs #6990

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -579,7 +579,7 @@ table.withdetails {
         content: ' ';
         display: inline-block;
         height: 16px;
-        margin-left: @padding;
+        margin-left: 0;
         .retina-background-image('dreieck_@{direction}.png', 'dreieck_@{direction}@2x.png', 16px, 16px);
         vertical-align: text-top;
         width: 16px;
