--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -46,4 +46,28 @@
         max-height: 140px;
         color: @base-color;
     }
+    
+    
+    /* for file/edit view: */
+    
+    /*
+    .termsOfUseBox.selected {
+        background-color: black;
+    }*/
+    
+    
+    input[name=content_terms_of_use_id] {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+    
+    div {
+        background-color:navy;
+    }
+    
+    input[name=content_terms_of_use_id]:checked ~ div {
+        background-color: black;
+    }
+    
 }
