MOADB: Improvements on license selector in file/edit view

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -62,12 +62,9 @@
         left: -9999px;
     }
     
-    div {
-        background-color:navy;
-    }
     
-    input[name=content_terms_of_use_id]:checked ~ div {
-        background-color: black;
+    input[name=content_terms_of_use_id]:checked ~ label {
+        background-color: blue;
     }
     
 }
