--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5802,10 +5802,10 @@ table.dates .draggable-topic-handle {
   top: -9999px;
   left: -9999px;
 }
-.file_select_possibilities div {
+.file_select_possibilities input[name=content_terms_of_use_id] ~ label {
   background-color: navy;
 }
-.file_select_possibilities input[name=content_terms_of_use_id]:checked ~ div {
+.file_select_possibilities input[name=content_terms_of_use_id]:checked ~ label {
   background-color: black;
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
