--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5802,8 +5802,20 @@ table.dates .draggable-topic-handle {
   top: -9999px;
   left: -9999px;
 }
-.file_select_possibilities input[name=content_terms_of_use_id]:checked ~ label {
-  background-color: blue;
+.file_select_possibilities label {
+  font-size: 70%;
+}
+.file_select_possibilities label img {
+  width: 40%;
+  height: 40%;
+  display: block;
+}
+.file_select_possibilities input[name=content_terms_of_use_id]:checked + label {
+  background-color: #1f4171;
+  color: #ffffff;
+}
+.file_select_possibilities input[name=content_terms_of_use_id]:checked + label img {
+  filter: invert(100%) brightness(200%);
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
 .eval_title {
